--- a/weatherApp/package.json
+++ b/weatherApp/package.json
@@ -16,7 +16,9 @@
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "@expo/metro-runtime": "~3.1.3",
+    "expo-location": "~16.5.5",
+    "expo-asset": "~9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
